force-app/main/default/objects/Task_Detail__c/Task_Detail__c.object-meta.xml
<CustomObject>
    <description>Stores long-form (Long Text Area) insurer requirements and worker responses that cannot be held on Activity/Task fields (capped at 255 chars). Anchored to the parent Opportunity (the Task's WhatId context); the originating Task is referenced via Task_Id__c, because Salesforce does not allow custom lookup relationships to Task/Activity.</description>
    <label>Task Detail</label>
    <pluralLabel>Task Details</pluralLabel>
    <nameField>
        <displayFormat>TD-{00000}</displayFormat>
        <label>Task Detail Number</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>