force-app/main/default/objects/Task_Detail__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <label>Opportunity</label>
    <type>Lookup</type>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Task Details</relationshipLabel>
    <relationshipName>Task_Details</relationshipName>
    <deleteConstraint>SetNull</deleteConstraint>
</CustomField>