force-app/main/default/objects/Task_Detail__c/fields/Requirement__c.field-meta.xml
<CustomField>
    <fullName>Requirement__c</fullName>
    <label>Requirement</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Full insurer requirement text (long-form). The Task carries a short summary in Activity.Requirement__c.</description>
</CustomField>