force-app/main/default/objects/Task_Detail__c/fields/Task_Id__c.field-meta.xml
<CustomField>
    <fullName>Task_Id__c</fullName>
    <label>Task ID</label>
    <type>Text</type>
    <length>18</length>
    <externalId>true</externalId>
    <description>Id of the originating Task (Activity). Used to link back, since Salesforce disallows custom lookups to Task/Activity.</description>
</CustomField>