force-app/main/default/objects/Task_Detail__c/fields/Worker_Response__c.field-meta.xml
<CustomField>
    <fullName>Worker_Response__c</fullName>
    <label>Worker Response</label>
    <type>LongTextArea</type>
    <length>32768</length>
    <description>Full worker response text (long-form). The Task carries a short summary in Activity.Worker_Response__c.</description>
</CustomField>